k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classedgi-front
  namespace: classedge
spec:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: classedgi-front-pod
  template:
    metadata:
      labels:
        app: classedgi-front-pod
    spec:
      containers:
      - name: classedgi-front-container
        image: jaechang13/classedgifront:259d80df20919669d81f55503fbf4628d8219231
        ports:
        - containerPort: 80
