k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classedgi-front-service
  namespace: classedge
spec:
spec:
  selector:
    app: classedgi-front-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
