k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classedge-ingress-rule
  namespace: classedge
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: classedgi-front-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: classedge-service
            port:
              number: 8080
